--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="/Advantages.html">Переваги</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/price.html">Ціна</a>
+                            <a class="nav-link" href="price.html">Ціна</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/models.html">Моделі</a>
@@ -137,6 +137,7 @@
         </button>
 </html>
 </html>
+
 
 
 
